Correccion paginas no admitidas

--- a/archivos/index.html
+++ b/archivos/index.html
@@ -10,5 +10,6 @@
     <h1>Logo de la escuela</h1>
     <p>Esta es una pagina de prueba html</p>
     <canvas id="logito" width="300" height="300"></canvas>
+    <script src="logoEscuela.js"></script>
 </body>
 </html>
